# sunleaf

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: disease_remedies.json  plant_care.json
docs/: APPROACH.md
notebooks/: colab_training.ipynb
tests/: test_models.py  test_sunlight.py
training/common/: utils.py
training/disease_detection/: download_and_convert.py
training/species_identification/: dataset.py  distill.py  export_tflite.py
training/sunlight/: light_classifier.py  sun_position.py
